--- a/src/app/share/layout/layout.component.html
+++ b/src/app/share/layout/layout.component.html
@@ -1,14 +1,28 @@
 <nz-layout class="layout">
   <nz-header>
-    <div class="logo">CODE</div>
-    <ul class="menu" nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'"  >
-      <li nz-menu-item>注册</li>
-      <li nz-menu-item>登录</li>
-      <li nz-menu-item>发布题解</li>
-      <li nz-menu-item>题解列表</li>
+    <div class="logo"> C O D E</div>
+    <ul class="menu" nz-menu [nzTheme]="'dark'" [nzMode]="'horizontal'">
+      <li nz-menu-item *ngIf="!user" (click)="navigateByUrl('/register')">
+        注册
+      </li>
+      <li nz-menu-item *ngIf="!user" (click)="navigateByUrl('/login')">
+        <a routerLink="/login">
+          登录
+        </a>
+      </li>
       <li nz-menu-item>题解页</li>
-      <li nz-menu-item>个人信息</li>
       <li nz-menu-item>积分榜</li>
+      <li nz-submenu *ngIf="user">
+        <span title>
+          用户：{{user?.nickName}}
+          <i class="anticon anticon-down"></i>
+        </span>
+        <ul>
+          <li nz-menu-item>发布题解</li>
+          <li nz-menu-item (click)="navigateByUrl('/person')" >个人信息</li>
+          <li nz-menu-item (click)="logout()">退出登录</li>
+        </ul>
+      </li>
     </ul>
   </nz-header>
   <nz-content class="content">
