--- a/src/app/share/layout/layout.component.scss
+++ b/src/app/share/layout/layout.component.scss
@@ -1,14 +1,15 @@
 .logo {
-  width: 120px;
-  height: 36px;
+  width: 140px;
+  height: 40px;
   background: #333;
   border-radius: 6px;
-  margin: 12px 24px 12px 0;
+  margin: 10px 0;
   float: left;
   font-size: 28px;
   color: #fff;
   line-height: 31px;
   text-align: center;
+  font-weight: 800;
 }
 
 .menu {
