--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -29,11 +29,18 @@
               <label nz-form-item-required>密码</label>
             </div>
             <div nz-form-control nz-col [nzSm]="14" nzHasFeedback>
-              <nz-input [nzSize]="'large'" formControlName="password" [nzType]="'password'" [nzId]="'password'"></nz-input>
+              <nz-input [nzSize]="'large'" formControlName="password" [nzType]="'password'"
+                        [nzId]="'password'"></nz-input>
               <div nz-form-explain
                    *ngIf="form.controls.password.touched && form.controls.password.hasError('required')">
                 密码不能为空！
               </div>
+            </div>
+          </div>
+
+          <div nz-form-item nz-row style="margin-bottom:8px;">
+            <div nz-form-control nz-col [nzSpan]="14" [nzOffset]="6">
+                  <a [routerLink]="['/register']"><span>还没有账号哦？注册一个</span></a>
             </div>
           </div>
 
